--- a/dessert/cannele.textile
+++ b/dessert/cannele.textile
@@ -13,7 +13,7 @@ h2. Ingrédients :
 
 h2. Comment faire :
 
-Faire nouillir le lait avec la vanille et le beurre
+Faire bouillir le lait avec la vanille et le beurre
 Pendant ce temps, mélanger la farine et le sucre.
 Puis incorporer les oeufs d'une seul coup et y rajouter le lait bouillant.
 Mélanger doucement afin d'obtenir une pâte fluide comme une pâte à crêpes.
