--- a/plat/quiche_lorraine.textile
+++ b/plat/quiche_lorraine.textile
@@ -3,32 +3,32 @@ h1. Quiche lorraine
 h2. Ingrédients :
 
 * 1 rouleau de pâte feuilletée
-* 3 œufs entiers
-* 30 cl de crème fraîche
-* 25 cl de lait
-* 300 grammes de lardons fumés
+* 4 œufs entiers
+* 20 cl de crème fraîche
+* 20 cl de lait
+* 200 grammes de lardons fumés
 * 150 grammes d’emmental râpé
 * Sel, Poivre
 
 h2. Comment faire :
 
-Mettre le four à préchauffer à 250°C pendant 10 minutes	
+Mettre le four à préchauffer à 220°C pendant 10 minutes	
 	
 Dans le moule à tarte, étalez la pâte feuilletée.
 Piquez un peu partout la pâte avec une fourchette afin d’éviter que celle-ci ne gonfle. 
 
-Prenez les lardons et faites les cuire à la poêle à feu vif, durant la cuisson égouttez les avec une passoire afin de faire partir leur graisse ayant fondu.	
+Etalez les lardons sur la pâte de manière harmonieuse et régulière.
 
 Prenez le saladier et cassez-y les 3 œufs puis versez la crème fraîche.
 Mélangez les œufs et la crème fraiche avec le fouet.
-Rajoutez progressivement le lait tout en continuant à mélanger avec le fouet	
-Ajoutez le Sel et le poivre
+Rajoutez progressivement le lait tout en continuant à mélanger avec le fouet (Ne pas hésiter à rajouter des oeufs, couleur jaune poussin recommandée).	
+Ajoutez le Sel et le poivre.
  
-Etalez les lardons sur la pâte précuite de manière harmonieuse et régulière.
-Verser la préparation
+Verser la préparation.
 Saupoudrez de manière régulière la quiche avec l’emmental.
-Enfournez la quiche durant 30 minutes à 250°C
+Enfournez la quiche durant 30 minutes à 220°C
 
 h2. Crédits
 
 http://www.quiche-lorraine.com/recette-quiche-lorraine/quiche-lorraine-recette.html
+Température de cuisson de JBH
