Rajout du plat de lasagne

--- a/plat/lasagne.textile
+++ b/plat/lasagne.textile
@@ -1,49 +1,23 @@
-h1. Lasagnes
+h1. Poulet à la Réunionnaise
 
 h2. Ingrédients :
 
-Pour 8 personnes
-* 1 paquet de pâtes à lasagnes
-* 3 oignons
-* 2 gousses d'ail
-* 1 branche de céleri
-* 1 carotte
-* 600 g viande de boeuf haché
-* 800 g purée de tomates
-* 1 verre d'eau
-* 1 verre de vin rouge
-* 2 feuilles de laurier
-* Thym
-* Basilic
-
-Sauce Béchamel :
-* 100 g farine
-* 100 g beurre
-* 1l de lait
-
-Nappage :
-* 70 g de fromage râpé
-* 125 g de parmesan
-* Beurre
+* 2/3 oignons
+* 1500/700gr de viande hachée (choisir en fonction du nombre de personnes)
+* 2/3 boites de sauce tomates à la viande (anciennement buitoni, maintenant zapetti:)
+* 2/3 boites de tomates concassées
+* Maïzena
+* Lait
+* Lasagne Barilla (elles sont meilleures:)
+* Fromage rapé
+* Sel et poivre
 
 h2. Comment faire :
 
-Emincez les oignons. Ecrasez l'ail. Hachez finement carotte et céleri. 
+1. Faire revenir l'oignon et la viande hachée. Y ajouter les boites de sauces tomates et tomates concassées. Laisser mijoter 10 minutes.
 
-Faire revenir ail et oignons dans un peu d'huile d'olive. Ajouter carotte et céleri. Puis la viande. Faire revenir le tout. Puis ajouter le vin rouge. Laisser s'évaporer.
+2. Dans une casserole, mettre de la maïzena (6 cuillerées à soupe environ, mais je ne suis pas sur des quantités, je fais au pif). Saler et poivrer. Ajouter du lait. Remuer. Mettre sur le feu jusqu'à ce que cela épaississe sans cesser de remuer (et rajouter du lait en fonction de l'épaississement).
 
-Ajouter la purée de tomates, le verre d'eau (facultatif), et les herbes. Saler, poivrer, puis laisser mijoter à feu doux 45 min.
+3. Dans un plat à gratin, mettre un peu de béchamel au fond. Faire des couches de viande, béchamel et lasagne. Terminer par de la béchamel et du fromage rapé. Faire cuire 30min à 220°C (à vérifier sur la boite de lasagne).
 
-Préparer la béchamel : faites fondre le beurre, puis, hors du feu, ajouter la farine d'un coup. Remettre sur le feu et remuer avec un fouet jusqu'à ce que cela devienne un mélange bien lisse.
-
-Ajouter le lait peu à peu. Remuer sans cesse, jusqu'à ce que le mélange s'épaississe. Ensuite, salez, poivrez. Laisser cuire environ 5 min, feu très doux, en remuant. 
-
-Huilez le plat à lasagnes. Posez une fine couche de béchamel, puis : lasagnes, bolognaise, béchamel et parmesan, et cela 3 fois de suite. 
-
-Sur la dernière couche de lasagnes, ne mettre que de la béchamel et recouvrir de fromage râpé. Parsemer quelques noisettes de beurre (facultatif).
-
-Faire cuire à 200°C pendant environ 25 min.
-
-h3. Crédits
-
-http://www.marmiton.org/recettes/recette_lasagnes-a-la-bolognaise_18215.aspx
+4. Déguster :)
