--- a/dessert/fondant_chocolat.textile
+++ b/dessert/fondant_chocolat.textile
@@ -17,7 +17,7 @@ Rajouter la farine.
 
 Faire cuire entre 20 et 25 min à 150°C.
 
-Si vous préférez qu'il soit moins cuit (voir coulant), faîtes le cuir seulement 8 à 10 min.
+Si vous préférez qu'il soit moins cuit (voire coulant), faîtes le cuir seulement 8 à 10 min.
 
 h2. Bonus : sucre glace
 
